package main_package;

class Constants {
    private Constants() {
        throw new AssertionError();
    }
    public static final String NPE_WARN = "No units selected. Choose units to convert and try again.";
    public static final String NFE_WARN = "Input field is empty! Try again.";
    public static final String NE_WARN = "Negative value entered! Try again.";


}
