@startuml
'https://plantuml.com/class-diagram

class Main {
+ {method} start(Stage primaryStage)
+ {static} main()
}

class MainController {
     +{field} Button convertButtonLength
     +{field} Button convertMassButton
     +{field} Button convertTempButton
     +{field} Button convertSquareButton
     +{field} Button convertVolumeButton

     +{field} TextField lengthInputField
     +{field} TextField massInputField
     +{field} TextField tempInputField
     +{field} TextField squareInputField
     +{field} TextField volumeInputField

     + {field} ComboBox lengthFromCB
     + {field} ComboBox lengthToCB
     + {field} ComboBox massFromCB
     + {field} ComboBox massToCB
     + {field} ComboBox tempFromCB
     + {field} ComboBox tempToCB
     + {field} ComboBox squareFromCB
     + {field} ComboBox squareToCB
     + {field} ComboBox volumeFromCB
     + {field} ComboBox volumeToCB

     - {field}{static} lengthValues
     - {field}{static} massValues
     - {field}{static} tempValues
     - {field}{static} squareValues
     - {field}{static} volumeValues

     - {method} showResult()
     + {method} initialize(URL url, ResourceBundle resourceBundle)
     - {method} lengthConvert()
     - {method} massConvert()
     - {method} tempConvert()
     - {method} squareConvert()
     - {method} volumeConvert()
}

class Constants {
+ {static} NPE_WARN : String
+ {static} NFE_WARN : String
+ {static} NE_WARN : String
}

abstract class Application

interface Initializable

Main -o Application : extends
Main --* MainController : connect through FXML
MainController --> Constants
MainController -o Initializable : implements

@enduml

